<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro"
    >

    <TextView
        android:id="@+id/title_cadastre_se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title_Cadastro"
        android:textSize="45sp"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_cadastre_se"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/nome"
        style="@style/Edit_Text"
        android:hint="Nome"
        android:drawableRight="@drawable/ic_user"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/email"
        style="@style/Edit_Text"
        android:hint="Email"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/nome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/senha"
        style="@style/Edit_Text"
        android:hint="Senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        style="@style/button"
        android:text="@string/Cadastrar"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar"
        style="@style/button"
        android:text="@string/Voltar"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastrar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>