<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCriarReserva">

    <TextView
        android:id="@+id/title_criar_reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Criar_Reserva"
        android:textSize="45sp"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/title_criar_reserva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/nome"
        style="@style/Edit_Text"
        android:hint="Email"
        android:drawableRight="@drawable/ic_email"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/quarto"
        style="@style/Edit_Text"
        android:hint="Quarto"
        android:drawableRight="@drawable/ic_room"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/nome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/dias"
        style="@style/Edit_Text"
        android:hint="Dias"
        android:drawableRight="@drawable/ic_calendar"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/quarto"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar_reserva"
        style="@style/button"
        android:text="@string/Cadastrar"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar_home"
        style="@style/button"
        android:text="@string/Voltar"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastrar_reserva"
        />






</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>