<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Home">

    <ImageView
        android:id="@+id/home"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--    <TextView-->
<!--        android:id="@+id/home"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/Title_Menu"-->
<!--        android:textSize="45sp"-->
<!--        android:layout_marginTop="70dp"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        />-->

    <TextView
        android:id="@+id/info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home"
        />

    <TextView
        android:id="@+id/info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_name"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reservas"
        style="@style/button"
        android:text="@string/Cadastrar_Reservas"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_email"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_consultar"
        style="@style/button"
        android:text="@string/Consulta_Reservas"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_reservas"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_deslogar"
        style="@style/button"
        android:text="@string/Deslogar"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_consultar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>